Another potential fix to the sidebar on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,12 +13,8 @@
   --blue-600: #2563eb;
 }
 
-html {
-  height: 100%;
-}
-
 body {
-  min-height: 100%;
+  height: 100dvh;
 }
 
 .react-calendar {
